# DeepLcli

./: .gitignore  pyproject.toml
deeplcli/: __main__.py  translate.py
tests/: test_deepl_cli.py
